# MEV_searcher

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  COMMIT_DOCUMENTATION.md  CPP_BUILD_GUIDE.md  CPP_IMPLEMENTATION_SUMMARY.md  DJANGO_DASHBOARD_SPEC.md  Dockerfile  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  PRODUCTION_DEPLOYMENT.md  QUICKSTART.md  QUICKSTART_CPP.md  QUICK_START.md  README.md  README_DJANGO.md  SOLANA_CONVERSION_STATUS.md  build_cpp.bat  check_vs_install.bat  deploy.sh  docker-compose.prod.yml  docker-compose.yml  jest.config.js  manage.py  package.json  requirements.txt  setup.py  test_django_setup.py  tsconfig.json
.github/workflows/: ci-cd.yml
analytics/: admin.py  models.py  urls.py  views.py
analytics/migrations/: 0001_initial.py
api/: admin.py  models.py  urls.py  views.py
api/migrations/: 0001_initial.py
config/: alerts.yml  prometheus.yml
cpp/: CMakeLists.txt  README.md
cpp/include/: bundle_builder.hpp  dag_filter.hpp  mev_engine.hpp  optimal_sizer.hpp  rlp_parser.hpp  sandwich_strategy.hpp  shadow_fork.hpp  types.hpp
cpp/src/: benchmark.cpp  bundle_builder.cpp  dag_filter.cpp  mev_engine.cpp  node_bindings.cpp  optimal_sizer.cpp  rlp_parser.cpp  shadow_fork.cpp
cpp/src/bindings/: node_addon.cpp
cpp/src/core/: mev_engine.cpp  optimal_sizer.cpp  sandwich_strategy.cpp
dashboard/: admin.py  models.py  urls.py  views.py
docker/: entrypoint.sh  nginx.conf  supervisord.conf
docs/: STRATEGIES.md  STRATEGY_IMPLEMENTATION.md  SUB_10MS_IMPLEMENTATION.md
k8s/: deployment.yaml
mev_dashboard/: asgi.py  settings.py  urls.py  wsgi.py
ml_training/: admin.py  models.py  urls.py  views.py
monitoring/: admin.py  models.py  urls.py  views.py
scripts/: health-check.sh  init-db.sql
src/: index.ts
storage/: admin.py  models.py
templates/: base.html
tests/: setup.ts
websocket/: consumers.py  routing.py
(+32 files in other folders)
